<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CSQuizz</string>
    <string name="app_header">Computer Science Fundamentals</string>
    <string name="app_subheader">- A Short Quiz - </string>
    <string name="user_name">Please Input Your Name:</string>
    <string name="user_answer">Answer:</string>
    <string name="start_button">Begin</string>
    <string name="name_input"> <xliff:g example="John Doe" id="name">%s</xliff:g></string>

    <string name="question_1">1. The image above was created by using a simple m * n two-dimensional array, where the value at each index, 1 or 0, determines the color of the pixel at that index in the image. What is the minimum possible value of m + n?</string>
    <string name="question_2">2. If you start with an empty stack, what will the stack look like after the following operations have been applied? (left->right)\npush(7); push(8); pop(); push(pop()*3); \npush(40); push(pop()/2);</string>
    <string name="question_3">3. Suppose that you have an unsorted array of 1000 emails and you want to check if abc123@gmail.com is in the array. Using a naive algorithm where you move sequentially through the list checking if each element matches abc123@gmail.com, what is the maximum number of comparisons you would need to make?</string>
    <string name="question_4">4. In general, what are the advantages of a red-black tree over a standard binary search tree?</string>
    <string name="question_5">5. Suppose you wanted to write a navigation algorithm via a breadth-first approach. Given a series of roads with intersections, your initial position, and your destination, what would the intersections represent?</string>

    <string name="q1_answer">19</string>

    <string name="q2_answer1">(24,20)</string>
    <string name="q2_answer2">(21,20)</string>
    <string name="q2_answer3">(7,8,40)</string>
    <string name="q2_answer4">(7,24,20)</string>

    <string name="q3_answer">1000</string>

    <string name="q4_answer1">A. It is better balanced</string>
    <string name="q4_answer2">B. It has faster insertion and deletion times</string>
    <string name="q4_answer3">C. It has a faster look-up time</string>
    <string name="q4_answer4">D. It can store more data in its leaves</string>

    <string name="q5_answer">Nodes</string>

    <string name="submit_text"><![CDATA[Submit & Score]]></string>

    <string name="high_score">Congratulations,</string>
    <string name="med_score">Good job,</string>
    <string name="low_score">Keep learning,</string>
    <string name="you_scored">! You scored:</string>

    <string name="reset_button">Reset</string>

</resources>
