<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context="com.example.android.csquizz.MainActivity">

        <View
            android:id="@+id/view_focus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/relative_height"
            tools:context="com.example.android.csquizz.MainActivity">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/title_margin_top"
                android:fontFamily="monospace"
                android:padding="@dimen/title_padding"
                android:text="@string/app_header"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_title"
                android:fontFamily="monospace"
                android:text="@string/app_subheader"
                android:textAlignment="center"
                android:textSize="@dimen/subtitle_size"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/image_banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_height"
                android:layout_above="@id/edit_user_name"
                android:scaleType="centerCrop"
                android:src="@drawable/cs_banner"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/edit_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/button_begin"
                android:layout_margin="@dimen/user_margin"
                android:fontFamily="monospace"
                android:hint="@string/user_name"
                android:imeOptions="actionDone"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/button_begin"
                android:layout_width="@dimen/begin_width"
                android:layout_height="@dimen/begin_height"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/begin_margin_bot"
                android:layout_marginTop="@dimen/begin_margin_top"
                android:background="@color/colorAccent"
                android:onClick="scrollDown"
                android:text="@string/start_button"
                android:textColor="@color/textColor" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.example.android.csquizz.MainActivity">

            <ImageView
                android:id="@+id/image_q1"
                android:layout_width="@dimen/q1image_width"
                android:layout_height="@dimen/q1image_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/q1image_margin"
                android:src="@drawable/q1_image"
                tools:ignore="ContentDescription" />

            <include layout="@layout/question_1" />

            <include
                android:id="@+id/xml_question2"
                layout="@layout/question_2" />

            <include layout="@layout/question_3" />

            <include layout="@layout/question_4" />

            <include layout="@layout/question_5" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/q_margin_top"
                android:layout_marginTop="@dimen/q_margin_top"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_submit"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/submit_margin"
                    android:layout_marginRight="@dimen/submit_margin"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:onClick="submitAnswers"
                    android:padding="@dimen/submit_padding"
                    android:text="@string/submit_text"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/button_reset"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/submit_margin"
                    android:layout_weight="1"
                    android:background="@color/colorAccent2"
                    android:onClick="resetAnswers"
                    android:padding="@dimen/submit_padding"
                    android:text="@string/reset_button"
                    android:textColor="@color/textColor" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>